# Practice

./: .gitignore  readme.txt
CPP_PROJ/basic/: add_numbers.cpp  ascii_value.cpp  hello_world.cpp  input_number.cpp  multiplication.cpp  quotient_remainder.cpp  size_of_variables.cpp  swap_number.cpp
CPP_PROJ/basic/output/: add_numbers  ascii_value  hello  multiplication  number  quotient_remainder  size_of_variables  swap_number
CPP_PROJ/pcl_test/: CMakeLists.txt  bin_read.cpp  pcd_read.cpp  pcd_write.cpp  test_pcd.pcd
CPP_PROJ/pcl_test/data/csv/: 000000.csv  000000_zero_intensity.csv
PYTORCH_PROJ/[Hong] week04/My_Code/: DNN_01_Exercise.ipynb  DNN_01_HiraOnly.ipynb  DNN_02_FCN.ipynb  DNN_02_YoloV1.ipynb  utils_Yolov1.py
PYTORCH_PROJ/[Hong] week04/Practice_DNN/: 01_extract.py  02_single.py  03_multi.py  DNN_01.ipynb  DNN_02.ipynb
